feat: add location suggestion API (#13)
